<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue"
    tools:context=".ChosenLeagueActivity"
    >


    <ImageView
        android:id="@+id/chosen_league_logo"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginTop="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/chosen_league_logo_desc" />

    <Button
        android:id="@+id/table_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/table_btn_text"
        app:backgroundTint="@color/dark_gray"
        app:cornerRadius="10sp"
        app:layout_constraintBottom_toTopOf="@+id/predict_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.35" />

    <Button
        android:id="@+id/predict_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/predict_btn_text"
        app:backgroundTint="@color/dark_gray"
        app:cornerRadius="10sp"
        app:layout_constraintBottom_toTopOf="@+id/schedule_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.35" />

    <Button
        android:id="@+id/schedule_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="74dp"
        android:text="@string/schedule_btn_text"
        app:backgroundTint="@color/dark_gray"
        app:cornerRadius="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.35" />

</androidx.constraintlayout.widget.ConstraintLayout>